# Advanced_ATD

./: .clang-format
AST/: CMakeLists.txt  main.cpp  make_ast.cpp  make_ast.h  parenthesis_substitution.cpp  parenthesis_substitution.h  simple_tree.h  tokenizer.cpp  tokenizer.h
BWT/: CMakeLists.txt  main.cpp
Block_chain/: CMakeLists.txt  main.cpp
Neuro/: CMakeLists.txt  main.cpp
Neuro/samples/: A_fail.txt  A_success_v1.txt  A_success_v2.txt  B_fail.txt  B_success.txt  D_success.txt  E_success.txt
Round Robin/: CMakeLists.txt  RoundRobin.cpp  RoundRobin.h  RoundRobinModel.cpp  RoundRobinModel.h  main.cpp  main.qml
